Fix vertical overflow

--- a/client/src/app/site/pages/meetings/pages/agenda/modules/topics/pages/topic-detail/components/topic-detail/topic-detail.component.scss
+++ b/client/src/app/site/pages/meetings/pages/agenda/modules/topics/pages/topic-detail/components/topic-detail/topic-detail.component.scss
@@ -30,9 +30,11 @@
 
 .attachment-entry {
     height: auto;
+    height: max-content !important;
 
     a {
         text-wrap: wrap;
         max-width: 100%;
+        word-break: break-word;
     }
 }
