--- a/client/src/app/site/pages/meetings/pages/assignments/pages/assignment-detail/components/assignment-detail/assignment-detail.component.scss
+++ b/client/src/app/site/pages/meetings/pages/assignments/pages/assignment-detail/components/assignment-detail/assignment-detail.component.scss
@@ -45,9 +45,11 @@ mat-card mat-card-content h3 {
 
 .election-document-list mat-list-item {
     height: auto;
+    height: max-content !important;
     a {
         text-wrap: wrap;
         max-width: 100%;
+        word-break: break-word;
     }
 }
 
