--- a/client/src/app/site/pages/meetings/pages/motions/pages/motion-detail/pages/motion-view/components/motion-content/motion-content.component.scss
+++ b/client/src/app/site/pages/meetings/pages/motions/pages/motion-detail/pages/motion-view/components/motion-content/motion-content.component.scss
@@ -13,9 +13,11 @@
 
 .attachment-entry {
     height: auto;
+    height: max-content !important;
 
     a {
         text-wrap: wrap;
         max-width: 100%;
+        word-break: break-word;
     }
 }
